welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: Boolean does not take parameters
		vuBiscuit() == true
                         ^Program:10: error: Boolean does not take parameters
	if (vuBiscuit() == true) {
                     ^