welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var vuBiscuit: Boolean = false
for (i<-1 to 6){
	if (!estSurBiscuit()){
		avance()
	}else{
		vuBiscuit() == true
	}
}
	if (vuBiscuit() == true) {
		return true
	} else {
		return false
	}

}